--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/Yahaddy/Health-Remedy#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
